[package]
name = "frieren"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
qbit-rs = { version = "0.4.4", default-features = false, features = ["rustls-tls"] }
toml = "0.8.19"
url = "2.5.4"
